# Pterodactyl-Eggs

./: .gitignore
.github/workflows/: docker-publish-azuracast.yml  docker-publish-bedrock-connect.yml  docker-publish-debian11.yml  docker-publish-glance.yml  docker-publish-kutt.yml  docker-publish-ntfy.yml  docker-publish-nuxtjs.yml  docker-publish-pocketbase.yml  docker-publish-tor-proxy.yml  docker-publish-url-shortener.yml
Web-Apps/: next-js.json  nuxt-js.json
games/hytale/: egg-hytale.json  start.sh
software/azuracast/: Dockerfile
software/bedrock-connect/: Dockerfile  egg-bedrock-connect.json  entrypoint.sh
software/forgejo/: egg-forgejo.json
software/garage/: Dockerfile  egg-garage.json  entrypoint.sh
software/glance/: egg-glance.json  entrypoint.sh
software/ntfy/: Dockerfile  egg-ntfy.json  egg-url-shortener.json  entrypoint.sh
software/pocketbase/: Dockerfile  egg-pocketbase.json  entrypoint.sh
software/tor-proxy/: Dockerfile  egg-tor-proxy.json  entrypoint.sh
software/url-shortener/: Dockerfile  egg-url-shortener.json  entrypoint.sh
vps/debian11/: egg-debian11.json
web-apps/nextjs/: next-js.json
web-apps/nuxtjs/: Dockerfile  entrypoint.sh  nuxt-js-old.json  nuxt-js.json
web-apps/nuxtjs/supervisor/: Cargo.toml
web-apps/nuxtjs/supervisor/scripts/: cleanup_build_artifacts.sh  cleanup_instance.sh  cleanup_instances.sh  create_new_build.sh  move_build_to_instance.sh  pull_latest_git_changes.sh
web-apps/nuxtjs/supervisor/src/: api.rs  instance-handler.rs  instance_handler.rs  main.rs  proxy.rs  runtime_cli.rs  utils.rs
(+9 files in other folders)
