[package]
name = "supervisor"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web framework
axum = "0.8.7"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Pingora reverse proxy
pingora = { version = "0.6", features = ["lb", "proxy"] }
async-trait = "0.1"

# Serialization/Deserialization for the webhook body
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging/Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }